--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+Sat Apr  8 15:42:33 JST 2006  Daigo Moriwaki <daigo@debian.org>
+
+	* Support CSA Protocal Version 1.1.
+	* Change the declaration of Jishogi 1.1.
+
 Fri Mar 10 23:09:43 JST 2006  Daigo Moriwaki <daigo@debian.org>
 
 	* Kifu logs are always written in separate files.
