--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+2006-07-30  Daigo Moriwaki <daigo at debian dot org>
+
+	* Add a @move_counter in Board class, which is used by Shogi Viewer
+	  CGI.
+
 2006-04-28  Daigo Moriwaki <daigo at debian dot org>
 
 	* Jishogi kachi declaration did not work. This bug has been fixed.
