* Change the player id, which is now <name>+<hash_of_the_trip>. * Fix the max length of the login name with a trip. * Add a comment line about the rated game status in the CSA file. * Remove the rating system, which will be calcurated by another program.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+2006-08-07  Daigo Moriwaki <daigo at debian dot org>
+
+	* Change the player id, which is now <name>+<hash_of_the_trip>.
+	* Fix the max length of the login name with a trip.
+	* Add a comment line about the rated game status in the CSA file.
+	* Remove the rating system, which will be calcurated by another
+	  program.
+
 2006-08-01  Daigo Moriwaki <daigo at debian dot org>
 
 	* Add a command, %%RATING, to show a ranking sorted by rates.
