--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+2006-08-14  Daigo Moriwaki <daigo at debian dot org>
+
+	* [mk_rate] Record numbers of win/loss games.
+	* Add mk_html, which genrates html from players.haml
+	* Fix test/test_board.rb. Now it works. 
+	* Add test/TC_ALL.rb to run all test cases.
+
 2006-08-11  Daigo Moriwaki <daigo at debian dot org>
 	
 	* Add mk_rate, which calculate rating scores.
