--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+2006-09-07  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - Re-design: trip is now a suffix of the password, not name.
+	  - Sipmlyfiled the output of %%RATING.
+	* [mk_rate]
+	  - Support "@" indentificaton in a name; players with same
+	    before-@-names are mapped to one.
+
 2006-09-05  Daigo Moriwaki <daigo at debian dot org>
 
 	* [mk_rate] Fix a bug. It solves the correct rate.
