--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+2006-09-15  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - Remove the trip in a password. Now the password is hashed.
+
 2006-09-09  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
