--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+2006-09-30  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server] The CSA mode supports the trip in a password.
+
 2006-09-22  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server] Refactored the login procedures.
