--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+2006-11-01  Daigo Moriwaki <daigo at debian dot org>
+
+	* [mk_rate] Skip "abnormal" games, which were finished because of
+	  network failure or communication error.  Recently some programs seem
+	  to have a lot of tries to connect to the Shogi Server at wdoor for
+	  debugging. We should ignore such games for a while to get a meaningful
+	  ratings.
+
 2006-10-30  Daigo Moriwaki <daigo at debian dot org>
 
 	* [mk_rate][mk_html]
