--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+2007-02-26  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server] Failed to show usage. This issue has been fixed. 
+
 2007-02-18  Daigo Moriwaki <daigo at debian dot org>
 
 	* [mk_html]
