--- a/changelog
+++ b/changelog
@@ -1,6 +1,9 @@
 2007-02-26  Daigo Moriwaki <daigo at debian dot org>
 
-	* [shogi-server] Failed to show usage. This issue has been fixed. 
+	* [shogi-server]
+	  - Failed to show usage. This issue has been fixed. 
+	  - Initial start of the server failed beacause of empty players.yaml.
+	    This issues has been fixed.
 
 2007-02-18  Daigo Moriwaki <daigo at debian dot org>
 
