--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+2007-04-21  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - Implemented `CHALLENGE' command, and the server will respond with
+	    `CHALLENGE ACCEPTED'. Note that this command is dummy for this server
+	    because it is only available for CSA's official testing server and does
+	    not belong to the CSA standard protocol.  Therefor, when clients receive
+	    `CHALLENGE ACCEPTED' from this server, they must ignore it.
+
 2007-04-01  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
