--- a/changelog
+++ b/changelog
@@ -1,7 +1,11 @@
+2008-02-05 Daigo Moriwaki <daigo at debian dot org>
+
+	* [mk_rate] [mk_html]
+	  - Display not-yet-rated players as well.
+
 2008-02-04 Daigo Moriwaki <daigo at debian dot org>
 
-	* [shogi-server]
-	* [webserver]
+	* [shogi-server] [webserver]
 	  - In the daemon mode, if the specified directory was a relative
 	    path, the server could fail to start with a permission denied
 	    error. This issue has been fixed. The path is interpreted as 
