--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2008-02-17 Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - An illegal teban specified for Floodgate login could crash the
+	    server. This issue has been fixed.
+
 2008-02-16 Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
