--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2008-04-01 Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - An incorrect LOGIN crashed the server. This issue has been
+	    fixed.
+
 2008-03-24 Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
