--- a/changelog
+++ b/changelog
@@ -4,6 +4,8 @@
 	  - Floodgate's thread could cause an error when players.yaml was
 	    cleared by another program (mk_rate). This issue has been 
 	    fixed.
+	  - Give default values to BasicPlayer, which fixed undefined 
+	    method error in Pairing.
 
 2008-05-10 Daigo Moriwaki <daigo at debian dot org>
 
