--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+2008-06-28 Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  -  Pairing players might not have shuffled players because of
+	     poor shuffling algorithm. This issue has been fixed.
+	     (Closes: #12661)
+
 2008-06-25 Daigo Moriwaki <daigo at debian dot org>
 
 	* [players_graph.rb]
