* [utils/eval_graph.rb]   - Display time control graphs as well.     Thanks to Nishimura-san for this idea.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2008-10-18 Daigo Moriwaki <daigo at debian dot org>
+
+	* [utils/eval_graph.rb]
+	  - Display time control graphs as well.
+	    Thanks to Nishimura-san for this idea.
+
 2008-10-08 Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
